--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -61,3 +61,14 @@
     padding-bottom: 20px;
     
 }
+
+.LoaderClass{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.tweetsContainer {
+    /* background-color: red; */
+}
