--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -53,13 +53,20 @@
 
 .MainContainer{
     margin-top: 5%;
+    display: flex;
+    flex-direction: row;
     
 }
 
 .MainContainer input{
     margin: 10px;
-    padding-bottom: 20px;
-    
+    padding: 10px;   
+}
+
+.inputTagDiv{
+    border-radius: 20px;
+    padding: 10px;
+    width: 35%;
 }
 
 .LoaderClass{
@@ -69,6 +76,4 @@
     height: 100vh;
 }
 
-.tweetsContainer {
-    /* background-color: red; */
-}
+
