--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -37,9 +37,13 @@
     text-align: left;
     margin-left: 7%;
     font-size: 1.2em;
-    border: 2px solid rgb(187, 187, 250);
+    border: 1.2px solid rgb(187, 187, 250);
     border-radius: 20px;
-    padding: 2% 4% ;
+    padding: 1% 3% ;
+    white-space: 20px;
+    display: flex;
+    justify-content: space-around;
+    
 }
 
 .getPollsBtn{
